# cs50-sql-web-personal

./: .gitignore
birthdays/: pyproject.toml
birthdays/static/: styles.css
birthdays/templates/: index.html
fiftyville/: .gitignore  log.sql
finance/: app.py  cr-portfolios-tb.sql  cr-transactions-tb.sql  cr-users-tb.sql  pyproject.toml
finance/static/: styles.css
finance/templates/: buy.html  deposit.html  history.html  index.html  layout.html  quote.html  quoted.html  register.html  sell.html
homepage/: index-styles.css  index.html  specification.txt  top-scripts.js  top-styles.css  top1.html  top2.html  top3.html  top4.html
movies/: 10.sql  11.sql  12.sql  13.sql  4.sql  6.sql  7.sql  9.sql
songs/: 3.sql
trivia/: index.html  styles.css
