[tool.poetry]
name = "birthdays"
version = "0.0.1"
description = "Harvar CS50X flask exercise"
authors = ["MauroGuar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-session = "^0.8.0"
cs50 = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
